chore: Add MongoDB connection and user validation to user controller

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=3000
+MONGODV_CNN=mongodb+srv://frpatino6Coffe:s4ntiago@mycoffecluster.yerjpro.mongodb.net/cafeDB
+USER=frpatino6Coffe
+PASS=s4ntiago
